--- a/views/admin/hitlist.ejs
+++ b/views/admin/hitlist.ejs
@@ -8,7 +8,7 @@
             
         </p>
         <img class="img-thumbnail imagax" src="/images/forhitlist.png">
-        <form class="form-group" action="/admin/hitlist" enctype="multipart/form-data" method="POST">
+        <form class="form-group" action="/admin/hitlist2" enctype="multipart/form-data" method="POST">
             
             <div class="custom-file">
                 
@@ -18,6 +18,7 @@
                 <button class="btn btn-primary" style="display: inline;">Upload File</button>
               </div> 
          </form>
+         <a href="/samples/hitlist.csv"><button class="btn btn-link">Download Sample File</button></a>
         </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
