--- a/views/admin/uploaddata.ejs
+++ b/views/admin/uploaddata.ejs
@@ -18,6 +18,7 @@
             <button class="btn btn-primary" style="display: inline;">Upload File</button>
           </div> 
      </form>
+     <a href="/samples/data.csv"><button class="btn btn-link">Download Sample File</button></a>
     </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
