--- a/views/admin/attendance2.ejs
+++ b/views/admin/attendance2.ejs
@@ -1,8 +1,5 @@
 <%- include("../partials/header") %>
-<%- include("../partials/adminnav") %>
-   
-</div><div class="container">
-    <div class="col-sm">
+ <div class="col-sm-10">
         <table class="table table-dark">
             <th>
                 Username
