--- a/views/admin/gensalary.ejs
+++ b/views/admin/gensalary.ejs
@@ -1,8 +1,6 @@
 <%- include("../partials/header") %>
-<%- include("../partials/adminnav") %>
 
-</div><div class="container">
-    <div class="col-sm">
+    <div class="col-sm-10">
         <table class="table table-dark">
             <th>
                 Username
