hitlist inside admin

--- a/views/admin/dataleft.ejs
+++ b/views/admin/dataleft.ejs
@@ -5,6 +5,9 @@
             <th>
                 Emails
             </th>
+            <% if(EMAIL<2000) {%>
+                <th class="table-danger">
+                <% } else {%> <th> <% } %>
             <th>
                 <%= EMAIL %>
             </th>
@@ -16,83 +19,123 @@
             <th>
                 Count
             </th>
-            <tr>
+            <% if(stes[0]<2000) {%>
+            <tr class="table-danger">
+            <% } else {%> <tr> <% } %>
                 <td>Arizona</td>
                 <td><%= stes[0] %></td>
             </tr>
-            <tr>
+            <% if(stes[1]<2000) {%>
+                <tr class="table-danger">
+                <% } else {%> <tr> <% } %>
                 <td>California</td>
                 <td><%= stes[1] %></td>
             </tr>
-            <tr>
+            <% if(stes[2]<2000) {%>
+                <tr class="table-danger">
+                <% } else {%> <tr> <% } %>
                 <td>Colorado</td>
                 <td><%= stes[2] %></td>
             </tr>
-            <tr>
+                <% if(stes[3]<2000) {%>
+                <tr class="table-danger">
+                <% } else {%> <tr> <% } %>
                 <td>Connecticut</td>
                 <td><%= stes[3] %></td>
             </tr>
-            <tr>
+            <% if(stes[4]<2000) {%>
+                <tr class="table-danger">
+                <% } else {%> <tr> <% } %>
                 <td>Florida</td>
                 <td><%= stes[4] %></td>
             </tr>
-            <tr>
+            <% if(stes[5]<2000) {%>
+                <tr class="table-danger">
+                <% } else {%> <tr> <% } %>
                 <td>Georgia</td>
                 <td><%= stes[5] %></td>
             </tr>
-            <tr>
+            <% if(stes[6]<2000) {%>
+                <tr class="table-danger">
+                <% } else {%> <tr> <% } %>
                 <td>Idaho</td>
                 <td><%= stes[6] %></td>
             </tr>
-            <tr>
+            <% if(stes[7]<2000) {%>
+                <tr class="table-danger">
+                <% } else { %> <tr> <% } %>
                 <td>Illinois</td>
                 <td><%= stes[7] %></td>
             </tr>
-            <tr>
+            <% if(stes[8]<2000) {%>
+                <tr class="table-danger">
+                <% } else {%> <tr> <% } %>
                 <td>Indiana</td>
                 <td><%= stes[8] %></td>
             </tr>
-            <tr>
+            <% if(stes[9]<2000) {%>
+                <tr class="table-danger">
+                <% } else {%> <tr> <% } %>
                 <td>Iowa</td>
                 <td><%= stes[9] %></td>
             </tr>
-            <tr>
+            <% if(stes[10]<2000) {%>
+                <tr class="table-danger">
+                <% } else {%> <tr> <% } %>
                 <td>Maryland</td>
                 <td><%= stes[10] %></td>
             </tr>
-            <tr>
+            <% if(stes[11]<2000) {%>
+                <tr class="table-danger">
+                <% } else {%> <tr> <% } %>
                 <td>Massachusetts</td>
                 <td><%= stes[11] %></td>
             </tr>
-            <tr>
+            <% if(stes[12]<2000) {%>
+                <tr class="table-danger">
+                <% } else {%> <tr> <% } %>
                 <td>Michigan</td>
                 <td><%= stes[12] %></td>
             </tr>
-            <tr>
+            <% if(stes[13]<2000) {%>
+                <tr class="table-danger">
+                <% } else {%> <tr> <% } %>
                 <td>Nebraska</td>
                 <td><%= stes[13] %></td>
             </tr>
-            <tr>
+            <% if(stes[14]<2000) {%>
+                <tr class="table-danger">
+                <% } else {%> <tr> <% } %>
                 <td>Nevada</td>
                 <td><%= stes[14] %></td>
             </tr>
-            <tr>
+            <% if(stes[15]<2000) {%>
+                <tr class="table-danger">
+                <% } else {%> <tr> <% } %>
                 <td>New Jersey</td>
                 <td><%= stes[15] %></td>
             </tr>
-            <tr>
+            <% if(stes[16]<2000) {%>
+                <tr class="table-danger">
+                <% } else {%> <tr> <% } %>
                 <td>Texas</td>
                 <td><%= stes[16] %></td>
             </tr>
-            <tr>
+            <% if(stes[17]<2000) {%>
+                <tr class="table-danger">
+                <% } else {%> <tr> <% } %>
                 <td>Utah</td>
                 <td><%= stes[17] %></td>
             </tr>
-            <tr>
+            <% if(stes[18]<2000) {%>
+                <tr class="table-danger">
+                <% } else {%> <tr> <% } %>
                 <td>Virginia</td>
                 <td><%= stes[18] %></td>
             </tr>
-            <tr>
+            <% if(stes[19]<2000) {%>
+                <tr class="table-danger">
+                <% } else {%> <tr> <% } %>
                 <td>Washington</td>
                 <td><%= stes[19] %></td>
             </tr>
