--- a/views/admin/attendance.ejs
+++ b/views/admin/attendance.ejs
@@ -1,5 +1,5 @@
 <%- include("../partials/header") %>
-   
+<% var attcount; %>
 
     <div class="col-sm-10">
         <table class="table table-dark">
@@ -20,21 +20,17 @@
                 </td>
                 
                     <% for(var j=0;j<arr.length;j++){ %>
-                        <% for(var k=0;k<dates.length;k++){ %>
-                                
-                    <% if(arr[j] === dates[k].date && worker[i].username === dates[k].username){ %>
-                    <%   cx++; %>
-                    <%   k = dates.length; %>
-                    <% }  %>  
-                    <% } %>
+                    <% attcount = dates.filter(x => x.date == arr[j] && x.username == worker[i].username) %>
+                        <% if(attcount && attcount.length){ %>         
+                            <%   cx++; %>
+                        <% } %>
                 <%  if(cx > 0){ %><td class="bg-primary">P</td> <%} else { %>
                     <td class="bg-danger">A</td>        
                 </td>
                 <%  } %>
                 <% cx = 0;%> 
                 <%  } %>
-            </tr>
-            
+            </tr>      
             <% } %>
     </table>
     </div>
