--- a/views/admin/attendance2.ejs
+++ b/views/admin/attendance2.ejs
@@ -1,4 +1,5 @@
 <%- include("../partials/header") %>
+<% var attcount; %>
  <div class="col-sm-10">
         <table class="table table-dark">
             <th>
@@ -17,14 +18,11 @@
             <%= worker[i].username %>
                 </td>
                 
-                    <% for(var j=0;j<arr.length;j++){ %>
-                        <% for(var k=0;k<dates.length;k++){ %>
-                               
-                    <% if(arr[j] === dates[k].date && worker[i].username === dates[k].username){ %>
-                    <%   cx++; %>
-                    <%   k = dates.length; %>
-                    <% }  %>  
-                    <% } %>
+                <% for(var j=0;j<arr.length;j++){ %>
+                    <% attcount = dates.filter(x => x.date == arr[j] && x.username == worker[i].username) %>
+                        <% if(attcount && attcount.length){ %>         
+                            <%   cx++; %>
+                        <% } %>
                 <%  if(cx > 0){ %><td class="bg-primary">P</td> <%} else { %>
                     <td class="bg-danger">A</td>        
                 </td>
