--- a/views/admin/gensalary.ejs
+++ b/views/admin/gensalary.ejs
@@ -1,6 +1,7 @@
 <%- include("../partials/header") %>
-
-    <div class="col-sm-10">
+<% var salcount %>
+<% var salsum = 0 %>
+    <div class="col-sm-8">
         <table class="table table-dark">
             <th>
                 Username
@@ -18,35 +19,41 @@
             <%    dsal = (worker[i].salary / daysm); %>
             
             <tr>
-                <td>
+                <td class="bg-info">
             <%= worker[i].username %>
                 </td>
                 
-                    <% for(var j=0;j<arr.length;j++){ %>
-                        <% for(var k=0;k<dates.length;k++){ %>
-                                
-                    <% if(arr[j] === dates[k].date && worker[i].username === dates[k].username){ %>
-                    <%   cx = cx + dsal %>
-                    <%   k = dates.length; %>
-                    <% }  %>  
-                    <% } %>
+                    <% for(var j=0;j<arr.length;j++){ %>  
+                        <% salcount = dates.filter(x => x.date == arr[j] && x.username == worker[i].username) %>
+                        <% if(salcount && salcount.length){ %>
+                        <%   cx = cx + dsal %>
+                        <% }  %>  
                 <%  } %>
                 <%  if(cx > 0){ %><td class="bg-info"><%= Math.round(cx) %></td> <%} else { %>
-                    <td class="bg-danger">0</td>        
+                    <td class="table-secondary">0</td>        
                 </td>
                 
                 <%  } %>
             </tr>
-            <% cx = 0;%>
-            <% dsal = 0; %> 
+            <% if(cx){ %>
+            <% salsum +=cx %>
             <% } %>
+            <% cx = 0 %>
+            <% dsal = 0  %> 
+            <% } %>
+            <tr class="bg-primary">
+                <td>
+                    Total
+                </td>
+                <td>
+                    <%= Math.round(salsum) %>
+                </td>
+            </tr>
     </table>
     </div>
 </div>
 </div> 
     
-    
- <%- include("../partials/footer") %>
     
 
 <%- include("../partials/footer") %>
