--- a/views/admin/hitlist2.ejs
+++ b/views/admin/hitlist2.ejs
@@ -1,6 +1,7 @@
 <%- include("../partials/header") %>
+<% var cool; %>
 
-<div class="col-sm-10">
+<div class="col-sm-9">
     <table class="table table-dark">
         <th>Username</th>
         <th>Offer 1</th>
@@ -9,54 +10,32 @@
         <th>Offer 4</th>
         <th>Offer 5</th>
         <th>Total</th>
-        <% for(var i=1; i<workers.length; i++) { %>
+        <% for(var i=1;i<workers.length;i++) { %>
             <tr>
                 <td><%= workers[i].username %></td>
-                
-                    
-                        <% for(var j=0; j<ipad.length; j++) { %>
-                            <% for(var k=0;k<fileRows.length; k++) { %>
-                    <% if(ipad[j].ipaddress === fileRows[k].offer1){ %>
-                        <% if(workers[i].username === ipad[j].username){ %>
-                            <% wooo++ %>
-                            <% break; %>
-                        <% } %>
-                        <% } %>
-                        <% if(fileRows[k].offer2 != ''){ %>
-                        <% if(ipad[j].ipaddress === fileRows[k].offer2){ %>
-                            <% if(workers[i].username === ipad[j].username){ %>
-                                <% wooo1++ %>
-                                <% break; %>
-                            <% } %>
-                        <% } %>
-                        <% } %>
-                        <% if(fileRows[k].offer3 != ''){ %>
-                        <% if(ipad[j].ipaddress === fileRows[k].offer3){ %>
-                            <% if(workers[i].username === ipad[j].username){ %>
-                                <% wooo2++ %>
-                                <% break; %>
-                            <% } %>
-                        <% } %>
-                        <% } %>
-                        <% if(fileRows[k].offer4 != ''){ %>
-                        <% if(ipad[j].ipaddress === fileRows[k].offer4){ %>
-                            <% if(workers[i].username === ipad[j].username){ %>
-                                <% wooo3++ %>
-                                <% break; %>
-                            <% } %>
-                        <% } %>
-                        <% } %>
-                        <% if(fileRows[k].offer5 != ''){ %>
-                        <% if(ipad[j].ipaddress === fileRows[k].offer5){ %>
-                            <% if(workers[i].username === ipad[j].username){ %>
-                                <% wooo4++ %>
-                                <% break; %>
-                            <% } %>
-                        <% } %>
-                        <% } %>
-                    <% } %>
+                <% for(var k=0;k<fileRows.length;k++) { %>
+                <% cool = ipad.filter(x => x.username == workers[i].username && x.ipaddress == fileRows[k].offer1) %>
+                <% if(cool && cool.length){ %>
+                    <% wooo++ %>
                 <% } %>
-                <% totalsum = (wooo+wooo1+wooo2+wooo3+wooo4) %>
+                <% cool = ipad.filter(x => x.username == workers[i].username && x.ipaddress == fileRows[k].offer2) %>
+                <% if(cool && cool.length){ %>
+                    <% wooo1++ %>
+                <% } %>
+                <% cool = ipad.filter(x => x.username == workers[i].username && x.ipaddress == fileRows[k].offer3) %>
+                <% if(cool && cool.length){ %>
+                    <% wooo2++ %>
+                <% } %>
+                <% cool = ipad.filter(x => x.username == workers[i].username && x.ipaddress == fileRows[k].offer4) %>
+                <% if(cool && cool.length){ %>
+                    <% wooo3++ %>
+                <% } %>
+                <% cool = ipad.filter(x => x.username == workers[i].username && x.ipaddress == fileRows[k].offer5) %>
+                <% if(cool && cool.length){ %>
+                    <% wooo4++ %>
+                <% } %>
+            <% } %>
+            <% totalsum = (wooo+wooo1+wooo2+wooo3+wooo4) %>
             <td><%= wooo %></td>
             <td><%= wooo1 %></td>
             <td><%= wooo2 %></td>
@@ -86,6 +65,7 @@
                 <td><%= colsum5 %></td>
                 <td><%= rowsum %></td>
             </tr>
+            
             
         </table>
     </div>
