--- a/views/admin/hitlist2.ejs
+++ b/views/admin/hitlist2.ejs
@@ -1,5 +1,7 @@
 <%- include("../partials/header") %>
+<p class="lead">Showing data from hitlist</p>
 <% var cool; %>
+
 
 <div class="col-sm-9">
     <table class="table table-dark">
