--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -34,6 +34,9 @@
           </ul>
           <ul class="navbar-nav mr-sm-2">
             <li class="nav-item active"> 
+                <a class="nav-link" href="/users/attendance">Attendance</a>
+            </li>
+            <li class="nav-item active"> 
               <a class="nav-link" href="/users/<%= currentUser._id %>">Profile</a>
             </li>
             <li class="nav-item active"> 
