--- a/views/users/userprofile.ejs
+++ b/views/users/userprofile.ejs
@@ -1,5 +1,5 @@
 <%- include("../partials/header") %>
-
+<% if(currentUser.username !== "krates"){ %>
     <% if(!currentUser.firstname){ %>
     <form action="/users/<%= currentUser._id %>?_method=PUT" method="POST">
         <hr>
@@ -201,6 +201,9 @@
             </div>
             </form>
     <% } %>
+    <% } else { %>
+        <p class="lead">Not Allowed</p>
+        <% }  %>
     
     
 
