hitlist attendance duplicates

--- a/views/admin/hitlist.ejs
+++ b/views/admin/hitlist.ejs
@@ -8,7 +8,7 @@
             
         </p>
         <img class="img-thumbnail imagax" src="/images/forhitlist.png">
-        <form class="form-group" action="/admin/hitlist2" enctype="multipart/form-data" method="POST">
+        <form class="form-group" action="/admin/hitlistsuccess" enctype="multipart/form-data" method="POST">
             
             <div class="custom-file">
                 
