--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -91,6 +91,9 @@
                         <li>
                             <a href="/admin/gensalary">Generate Salary</a>
                         </li>
+                        <li>
+                            <a href="/admin/gensalarylm">L/M Salary</a>
+                        </li>
                     </ul>
                 </li>
                 <li>
@@ -108,12 +111,21 @@
               <li>
                 <a href="/admin/offers">Add Offers</a>
             </li>
+            <li>
+                <a href="#hitlistSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Hitlist</a>
+                <ul class="collapse list-unstyled" id="hitlistSubmenu">
                 <li>
                     <a href="/admin/hitlist">Hitlist</a>
                 </li>
                 <li>
-                    <a target="_blank" href="/hiddenregister">Register</a>
+                    <a href="/admin/checkhitlist">Check Hitlist</a>
                 </li>
+            </ul>
+            </li>
+            <li>
+                <a target="_blank" href="/hiddenregister">Register</a>
+            </li>
+                
             </ul>
         </nav>
     
