--- a/views/admin/gensalarylm.ejs
+++ b/views/admin/gensalarylm.ejs
@@ -10,7 +10,7 @@
             <th>
                 Salary Till Date
             </th>
-            <%  for(var i=1;i<=daysd;i++){ %>    
+            <%  for(var i=1;i<=daysm;i++){ %>    
                 <%  if(i<10){ xax = "0"+i.toString(); } else{ %>
                         <%     xax = i.toString(); } %>
                         <%   xax = xax + "/"+ curm +"/2020"; %>
