--- a/views/admin/hitlistsuccess.ejs
+++ b/views/admin/hitlistsuccess.ejs
@@ -1,7 +1,8 @@
 <%- include("../partials/header") %>
 
-<div class="col-sm-10">
+<div class="col-sm-10 toprow">
     <h2 class="success">Upload Hitlist Successful</h2>
+    <h6> Wait a minute and then click on check Hitlist</h6>
     </div>
 </div>
     
