--- a/views/admin/uploaddata2.ejs
+++ b/views/admin/uploaddata2.ejs
@@ -1,7 +1,7 @@
 <%- include("../partials/header") %>
 
 
-    <div class="col-sm-10">
+    <div class="col-sm-10 toprow">
         <h2 class="success">Upload Data Successful</h2>
         </div>
     </div>
