--- a/views/users/attendance.ejs
+++ b/views/users/attendance.ejs
@@ -1,14 +1,48 @@
 <%- include("../partials/header") %>
 
 <% if(currentUser.username === "krates"){ %>
-    <div class="col-sm-8 toprow">
-        <h1 class="display-6">Welcome <%= currentUser.username %></h1>
-        <button class="btn btn-success btn-lg btn-pad">Half Day</button>
-        <button class="btn btn-primary btn-lg btn-pad">Double Day</button>
-        <button class="btn btn-danger btn-lg btn-pad">Week Off</button>
-        <button class="btn btn-warning btn-lg btn-pad">Holiday</button>
-        <button class="btn btn-info btn-lg btn-pad">Overtime</button>
-    </div>
+    <div class="col-sm-10 ">
+        <div class="col-sm">
+            <h1 class="display-6">Welcome <%= currentUser.username %></h1><br>
+              <div>
+                  <form action="attendance" method="POST">
+                      <table class="table table-striped">
+                          <tr>
+                              <td>
+                      <input type="radio" id="halfday" name="reason" value="halfday">
+                      <label for="halfday">Half Day</label>
+                              </td>  
+                              <td>   
+                      <input type="radio" id="doubleday" name="reason" value="doubleday">
+                      <label for="doubleday">Double Day</label>
+                              </td>  
+                              <td>    
+                      <input type="radio" id="weekoff" name="reason" value="weekoff">
+                      <label for="weekoff">Week Off</label>
+                              </td>  
+                              <td>  
+                      <input type="radio" id="holiday" name="reason" value="holiday">
+                      <label for="holiday">Holiday</label>
+                              </td>  
+                              <td>  
+                      <input type="radio" id="overtime" name="reason" value="overtime">
+                      <label for="overtime">Overtime</label>
+                      <input type="number" id="quantity" name="quantity" min="1" max="5">
+                              </td>  
+                              <td>  
+                      </tr>
+                      <tr><td colspan="6">
+                      <input type="checkbox" id="vehicle1" required>
+                      <label for="vehicle1"> I Agree</label>
+                      </td></tr>
+                      <tr><td colspan="6">
+                      <button class="btn btn-primary btn-lg">Submit</button>
+                  </td></tr>
+                  </table>
+                  </form> 
+            </div>
+        </div>
+  
 
 <% } else { %>
 <div class="toprow">
