final changes to hitlist and forgot pass salary and offers

--- a/views/admin/gensalary.ejs
+++ b/views/admin/gensalary.ejs
@@ -38,7 +38,7 @@
                                 <%   cx = cx + dsal %>
                             <% }  %>
                             <% if(attvar[0].reason === "doubleday" && cx>0){ %>
-                                <%   cx = cx + dsal %>
+                                <%   cx = cx + dsal + (Number(attvar[0].overtime) * 50) %>
                             <% }  %>
                             <% if(attvar[0].reason === "overtime" && cx>0){ %>
                                 <%  cx = cx + (Number(attvar[0].overtime) * 50) %>
