--- a/views/pages/pages.ejs
+++ b/views/pages/pages.ejs
@@ -2,7 +2,7 @@
 <% if(currentUser.username === "krates"){ %>
 <div class="col-sm-9 row">
     <% } else { %>
-        <div class="row">
+        <div class="col-sm-12 row">
         <% } %>
     <% for(var i=0;i<offurl.length;i++){ %>
     <% if(counte[0].count % offurl[i].priority === 0){%>
