--- a/views/pages/pages.ejs
+++ b/views/pages/pages.ejs
@@ -1,8 +1,11 @@
 <%- include("../partials/header") %>
-
-<div class="row">
+<% if(currentUser.username === "krates"){ %>
+<div class="col-sm-9 row">
+    <% } else { %>
+        <div class="col-sm-12 row">
+        <% } %>
     <% for(var i=0;i<offurl.length;i++){ %>
-    
+    <% if(counte[0].count % offurl[i].priority === 0){%>
     <div class="col-sm-4">
         <div class="card text-white bg-secondary mb-3 topclass">
             <div class="card-header">OFFER <%= i+1 %></div>
@@ -11,7 +14,7 @@
             </div>
         </div>
     </div>
-    <% } %>
+    <% }} %>
 </div>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 <script type="text/javascript" src="/js/openlinks.js"></script>  
