--- a/views/ipcheck.ejs
+++ b/views/ipcheck.ejs
@@ -1,4 +1,4 @@
-<%- include("../partials/header") %>
+<%- include("./partials/header") %>
 
 <div class="container">
     <div class="toprow">
@@ -6,4 +6,4 @@
     </div>
 </div>
 
-<%- include("../partials/footer") %>
+<%- include("./partials/footer") %>
